--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@remixicon/react": "^4.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "next-auth": "^4.24.13",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "remixicon": "^4.8.0",
     "shadcn": "^3.7.0",
     "tailwind-merge": "^3.4.0"
   },
