--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "node node_modules/next/dist/bin/next dev",
+    "build": "bun --bun next build",
+    "start": "bun --bun next start",
     "lint": "eslint"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "@remixicon/react": "^4.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fast-xml-parser": "^5.3.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "next-auth": "^4.24.13",
@@ -22,7 +23,8 @@
     "react-dom": "19.2.3",
     "remixicon": "^4.8.0",
     "shadcn": "^3.7.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "undici": "^7.19.1"
   },
   "devDependencies": {
     "@prisma/adapter-pg": "^7.3.0",
@@ -40,5 +42,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  }
+  },
+  "workspaces": [
+    "."
+  ]
 }
